@@ -2,8 +2,9 @@
 
 = 5.3.0 =
 * WordPress 6.8 compatible.
-* Fixed Affiliates Dashboard block preview not available.
-* Fixed Affiliates Dashboard Earnings block preview not available.
+* Fixed Affiliates Dashboard block preview.
+* Fixed Affiliates Dashboard Earnings block preview.
+* Fixed Affiliates Dashboard Login block preview.
 
 = 5.2.0 =
 * WordPress 6.8 compatible.
